--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jul 28 08:22:48 CST 2022
+#Thu Jul 28 09:42:25 CST 2022
 generator-settings=
 allow-nether=true
 level-name=world
@@ -27,4 +27,4 @@ spawn-monsters=true
 view-distance=10
 generate-structures=true
 spawn-protection=16
-motd=1.6.2\u00B5\u00C4\u00D0\u00A1\u00D0\u00CDhamachi\u00C9\u00FA\u00B4\u00E6\u00B7\u00FE
+motd=SDM&LL
